tests/ui/lang/consts/nested-ref-in-composite.stderr
error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:20:17
   |
20 |     *pair_out = pair_deep_load(&(&123, &3.14));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Stack:
           nested_ref_in_composite::main_pair
           main_pair

error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:25:19
   |
25 |     *array3_out = array3_deep_load(&[&0, &1, &2]);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Stack:
           nested_ref_in_composite::main_array3
           main_array3

error: aborting due to 2 previous errors

